objects/Rosco_Tag_Map__c/Rosco_Tag_Map__c.object-meta.xml
<CustomObject>
    <label>Rosco_Tag_Map</label>
    <nameField>
        <label>Case</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rosco_Tag_Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>