objects/Rosco_Tag_Map__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rosco_Tag_Maps</relationshipLabel>
    <relationshipName>Rosco_Tag_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>