objects/Rosco_Tag_Map__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Rosco_Tag_Maps</relationshipLabel>
    <relationshipName>Rosco_Tag_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>