objects/Rosco_Tag_Map__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocking</fullName>
            </value>
            <value>
                <fullName>Significant Risk</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>