objects/Rosco_Tag_Map__c/fields/Jira_Done__c.field-meta.xml
<CustomField>
    <fullName>Jira_Done__c</fullName>
    <description>Formula field to check if there is a Jira Issue and if the Status is not Done, Rejected, or Resolved.</description>
    <formula>IF(OR(ISBLANK(Jira_Issue__c),
 OR((Jira_Issue__r.Issue_Status__c = &apos;Done&apos;),
(Jira_Issue__r.Issue_Status__c = &apos;Resolved&apos;),
(Jira_Issue__r.Issue_Status__c = &apos;Rejected&apos;))),TRUE,FALSE)</formula>
    <label>Jira Done?</label>
    <type>Checkbox</type>
</CustomField>