objects/Rosco_Tag_Map__c/fields/Jira_Issue__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jira Issue</label>
    <referenceTo>Jira_Issue__c</referenceTo>
    <relationshipLabel>Rosco_Tag_Maps</relationshipLabel>
    <relationshipName>Rosco_Tag_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>