objects/Rosco_Tag_Map__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Benchmark</fullName>
            </value>
            <value>
                <fullName>Certificate Manager</fullName>
            </value>
            <value>
                <fullName>Cloud Workloads</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
            <value>
                <fullName>Config</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>DEC</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Endpoint</fullName>
            </value>
            <value>
                <fullName>Enforce</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Integrity Monitor</fullName>
            </value>
            <value>
                <fullName>Interact</fullName>
            </value>
            <value>
                <fullName>Investigate</fullName>
            </value>
            <value>
                <fullName>Jump Gate</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Provision</fullName>
            </value>
            <value>
                <fullName>Reveal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>