objects/Rosco_Tag_Map__c/fields/tag__c.field-meta.xml
<CustomField>
    <fullName>tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>tag</label>
    <referenceTo>Rosco_Tag__c</referenceTo>
    <relationshipLabel>Rosco_Tag_Maps</relationshipLabel>
    <relationshipName>Rosco_Tag_Maps1</relationshipName>
    <type>Lookup</type>
</CustomField>